--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 /* Pictures */
 .meme {
-    width: 600px;
+    width: 100%;
     display: inline-block;
     z-index: 100;
     position: absolute;
